--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -18,24 +18,24 @@ html,body {
 }
 
 .angled1 {
-	/*background-color: #fff3e0;*/
+  /*background-color: #fff3e0;*/
     /*clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);*/
-  	/*height:650px;*/
-  	padding:0;
-	}
+    /*height:650px;*/
+    padding:0;
+  }
 .navbar-default {
-	background-color: #fff3e0;
-	height:70px;
-	/*font-family: 'Stylish', sans-serif;*/
-	/*font-family: 'Passion One', cursive;*/
-	/*font-family: 'Fugaz One', cursive;*/
-	/*Geomanist,Helvetica,sans-serif;*/
-	/*font-family: 'geomanistregular';*/
+  background-color: #fff3e0;
+  height:70px;
+  /*font-family: 'Stylish', sans-serif;*/
+  /*font-family: 'Passion One', cursive;*/
+  /*font-family: 'Fugaz One', cursive;*/
+  /*Geomanist,Helvetica,sans-serif;*/
+  /*font-family: 'geomanistregular';*/
 
 }
 
   .navbar-default .navbar-nav > li > a {
-   color: 	#666; /*change the text color*/
+   color:   #666; /*change the text color*/
    font-size: 18px;
    line-height: 200%;
    }
@@ -60,21 +60,21 @@ color: #666;  /*Sets the text hover color on navbar*/
 }
 
 .prof {
-	width:200px;
-	border-radius: 50%;
+  width:200px;
+  border-radius: 50%;
   margin:20px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .huge {
-	font-size: 6vw;
-	/*font-size: 4vw;*/
-	font-weight: 900;
+  font-size: 6vw;
+  /*font-size: 4vw;*/
+  font-weight: 900;
 
-	}
+  }
 .heavy {
-	color:#666;
+  color:#666;
   text-align: center; 
 }
 
@@ -390,4 +390,55 @@ position: fixed;
   animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
   animation-direction: alternate;
+}
+
+@media only screen and (max-width: 1200px) {
+  /* For mobile phones: */
+      .talk-bubble {
+      display: inline-block;
+      position: absolute;
+    /* width: 30%;*/
+      height: auto;
+      padding:10px;
+      top:8%;
+    /* right:20%;*/
+      background-color: lightyellow;
+      font-size: 2.5vw;
+    }
+
+    .talk-bubble2 {
+      display: inline-block;
+      position: absolute;
+      width: 50% !important; 
+      height: auto;
+      padding:10px;
+      top:12%;
+      left: -4% !important;
+      background-color: lightyellow;
+      font-size: 2.5vw;
+    }
+
+    .talk-bubble3 {
+      display: inline-block;
+      position: absolute;
+      width: 40% !important;
+      height: auto;
+      padding:10px;
+      top:90%;
+      left:15% !important;
+      background-color: lightyellow;
+      font-size: 2.5vw;
+    }
+
+    .talk-bubble4 {
+      display: inline-block;
+      position: absolute;
+      width: 40% !important;
+      height: auto;
+      padding:10px;
+      top:80%;
+      left:50% !important;
+      background-color: lightyellow;
+      font-size: 2.5vw;
+    }
 }
