--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -392,7 +392,7 @@ position: fixed;
   animation-direction: alternate;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   /* For mobile phones: */
       .talk-bubble {
       display: inline-block;
