--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -397,11 +397,11 @@ position: fixed;
       .talk-bubble {
       display: inline-block;
       position: absolute;
-      width: 40%;
+      width: 40% !important;
       height: auto;
       padding:10px;
-      top:2%;
-      right:2%;
+      top:2% !important;
+      right:2% !important;
       background-color: lightyellow;
       font-size: 2.5vw;
     }
